--- a/forms.html
+++ b/forms.html
@@ -4,7 +4,7 @@
     <title>❤️ Yong's Persoal Site</title>
 </head>
 <body>
-    <form class="" action="mailto:ychung25@outloo.com" method="post">
+    <form class="" action="mailto:ychung25@hotmail.com" method="post">
         <table>
             <tr>
                 <td><label for="">Your Name:</label> </td>
