--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <hr size="3" noshade="true">
         <h3>Education</h3>
         <ul>
-            <li><a href="https://en.wikipedia.org/wiki/North_Surrey_Secondary_School">High school</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/High_school_(North_America)">High school</a></li>
             <li>University</li>
             <li>Grad school</li>
         </ul>
