modified index.html from feature1 local branch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="https://en.wikipedia.org/wiki/High_school_(North_America)">High school</a></li>
             <li>University</li>
-            <li>Grad school- for fun!</li>
+            <li>Grad school- for fun! 🏫🏫</li>
         </ul>
         <hr size="3" noshade="true">
         <a href="hobby.html">my hobby</a>
