creat a new css style

--- a/forms.html
+++ b/forms.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>❤️ Yong's Persoal Site</title>
+    <title>Yong's Persoal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <form class="" action="mailto:ychung25@hotmail.com" method="post">
