--- a/hobby.html
+++ b/hobby.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>👍 Yong's Hobby</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h3>My hobbies</h3>
+        <hr>
         <ul>
             <li><a href="games.html">Game</a></li>
             <li>Code</li>
