--- a/games.html
+++ b/games.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Yong's Games</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table>
