update index.html and styles with bacon and brocolli

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <img src="https://media-exp1.licdn.com/dms/image/C4D03AQGA5s2_Z7EQag/profile-displayphoto-shrink_200_200/0/1516926780060?e=1648684800&v=beta&t=OI7f2yBMOdq1nwtAqNn4LsSyiyDokGWFFG7rGVYouBI">
         <h1>Yongik Chung</h1>
-        <p><em>Loves</em> <strong>coding</strong></p>
+        <p id="first-paragraph"><em>Loves</em> <strong>coding</strong></p>
         <hr>
         <h3>Education</h3>
         <ul>
@@ -20,5 +20,9 @@
         <a href="hobby.html">my hobby</a>
         <br>
         <a href="forms.html">forms test</a>
+        <br>
+        <img class="brocolli" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/microsoft/310/broccoli_1f966.png">
+        <br>
+        <img class="bacon circularBorder" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/google/313/bacon_1f953.png">
     </body>
 </html>
